--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -44,7 +44,7 @@ $body-font-family: "Noto Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial,
 
 // Colors
 
-$primary-color: #660099;
+$primary-color: #002e42;
 $secondary-color: rgb(245, 245, 245);
 // $alert-color: rgb(241, 206, 171);
 // $success-color: rgb(213, 236, 191);
@@ -1220,7 +1220,7 @@ $topbar-title-weight:                  normal;
 
 // Style the top bar dropdown elements
 
-$topbar-dropdown-bg:                   #884DA7;
+$topbar-dropdown-bg:                   #002e42;
 $topbar-dropdown-link-color:           #fff;
 $topbar-dropdown-link-bg:              darken($primary-color, 15%);
 // $topbar-dropdown-toggle-size:          5px;
