--- a/templates/forum/details.html
+++ b/templates/forum/details.html
@@ -29,7 +29,7 @@
 
 {% block content %}
 
-
+<div class="row">
 {% if sticky_topics %}
     <div class="forum-entries forum-entries-sticky">
         {% for topic in sticky_topics %}
@@ -43,7 +43,7 @@
         {% include "forum/details_row.part.html" %}
     {% endfor %}
 </div>
-
+</div>
 {% include "forum/details_pagination.part.html" with position="bottom" %}
 
 {% endblock %}
