--- a/templates/member/profile.html
+++ b/templates/member/profile.html
@@ -108,6 +108,8 @@
     <div class="large-12 columns">
         <h2>Biographie</h2>
         {{ profile.biography|emarkdown }}
+        <h2>Signature</h2>
+        {{ profile.sign|emarkdown }}
     </div>
 </div>
 
