--- a/assets/sass/_foundation-icons.scss
+++ b/assets/sass/_foundation-icons.scss
@@ -20,7 +20,13 @@
 .size-16 { font-size: 16px; }
 .size-18 { font-size: 18px; }
 .size-21 { font-size: 21px; }
+.size-22 { font-size: 22px; }
+.size-23 { font-size: 23px; }
 .size-24 { font-size: 24px; }
+.size-25 { font-size: 25px; }
+.size-26 { font-size: 26px; }
+.size-27 { font-size: 27px; }
+.size-28 { font-size: 28px; }
 .size-36 { font-size: 36px; }
 .size-48 { font-size: 48px; }
 .size-60 { font-size: 60px; }
