--- a/templates/home.html
+++ b/templates/home.html
@@ -29,8 +29,6 @@ class="active"
 <div class="row">
  
           <div class="large-6 columns">
- 
-            <h3 class="show-for-small">Header<hr></h3>
             <div class="row">
               <div class="large-12 small-12 columns">
                 <div class="panel">
@@ -40,7 +38,7 @@ class="active"
                   <hr />
                   <div class="row">
                   <div class="large-12">
-                    <div class="large-2 columns">
+                    <div class="large-2 columns hide-for-small">
                         <img src="{{ news.image.thumb.url }}">
                     </div>
                     <div class="large-9 columns">
@@ -52,7 +50,9 @@ class="active"
                     <p class="subheader">
                         {% if news.category %}
                         {% for category in news.category.all %}
-                            <a href="{{category.get_news_url}}">{{category.title}}</a>
+                        
+                            <a class="label secondary" href="{{category.get_news_url}}">{{category.title}}</a>
+                        
                         {% endfor %}
                         {% endif %}
                         <i class="fi-clock"></i>
@@ -96,14 +96,17 @@ class="active"
                     <h3><a href="{% url "lbp.project.views.index" %}">Forums</a></h3>
                     <hr />
                     <div class="row">
-                {% if last_topics %}
-                    {% for topic in last_topics %}
-                        {% include "forum/topic_item_common.part.html" %}
-                    {% endfor %}
-                {% else %}
+                        <div class="large-12 columns">
+                        {% if last_topics %}
+                            {% for topic in last_topics %}
+                                {% include "forum/topic_item_common.part.html" %}
+                            {% endfor %}
+                        {% else %}
                     <p>Aucun sujet récent.</p>
-                {% endif %}
-            </div>
+                    
+                    {% endif %}
+                    </div>
+                </div>
                 </div>
             </div>
           <div class="row">
