--- a/templates/news/view.html
+++ b/templates/news/view.html
@@ -98,7 +98,7 @@
 
 {% block content %}
 
-{% if news.is_visible %}
+{% if news.en_ligne %}
     {% include "news/view_pager.part.html" %}
 {% endif %}
 
@@ -106,9 +106,7 @@
     <div class="large-12 columns panel">
         <div class="large-3 columns">
             {% for cat in news.category.all %}
-                <div class="row">
                     <a href="{{ cat.get_news_url }}" class="button secondary">{{ cat.title }}</a>
-                </div>
             {% endfor %}
         </div>
         <div class="large-4 columns">
