--- a/templates/home.html
+++ b/templates/home.html
@@ -93,7 +93,7 @@ class="active"
           <div class="large-6 columns">
             <div class="row">
                 <div class="panel">
-                    <h3><a href="{% url "lbp.project.views.index" %}">Forums</a></h3>
+                    <h3><a href="{% url "lbp.forum.views.index" %}">Forums</a></h3>
                     <hr />
                     <div class="row">
                         <div class="large-12 columns">
