--- a/templates/home.html
+++ b/templates/home.html
@@ -92,6 +92,7 @@ class="active"
           </div>
           <div class="large-6 columns">
             <div class="row">
+                <div class="large-12 columns">
                 <div class="panel">
                     <h3><a href="{% url "lbp.forum.views.index" %}">Forums</a></h3>
                     <hr />
@@ -109,7 +110,9 @@ class="active"
                 </div>
                 </div>
             </div>
+            </div>
           <div class="row">
+            <div class="large-12 columns">
             <div class="panel">
                 <h3><a href="{% url "lbp.project.views.index" %}">Projets</a></h3>
                 <hr />
@@ -129,6 +132,7 @@ class="active"
         {% endfor %}
         {% endif %} 
         </div>
+    </div>
           </div>
  
         </div>
