Improve Home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,6 +23,9 @@ class="active"
 {% endblock %}
 
 {# Content #}
+{% block headline-sub %}
+Bienvenue sur LeBonProjet
+{% endblock %}
 
 {% block content %}
 
