--- a/templates/pages/roadmap.html
+++ b/templates/pages/roadmap.html
@@ -16,59 +16,45 @@
 
 <div class="row">
     <div class="large-4 columns">
-        <h3>News</h3>
+        <h3>Membres</h3>
         <h4>Features developpées</h4>
         <ul>
-            <li class="alert">Bouton News dans la Topbar</li>
+            <li class="alert">La Topbar</li>
             <ul>
-                <li>Affichage des catégories de News</li>
-                <li>Liens de proposition de la news</li>
-                <li>Liens d'administration (Newser)</li>
+                <li>MP reçus (alertes)</li>
+                <li>Connexion</li>
+                <li>Déconnexion</li>
+                <li>Profil</li>
             </ul>
-            <li>Lecture des News</li>
+            <li>Membre</li>
             <ul>
-                <li>Affichage de liste des news</li>
-                <li>Affichage des news par catégorie</li>
-                <li>Vue sur une News</li>
-            </ul>
-            <li>Commentaire de News</li>
-            <ul>
-                <li>Saisie des commentaires</li>
-                <li>Edition des commentaires</li>
-            </ul>
-            <li>Administration des news</li>
-            <ul>
-                <li>Possibilité d'envoyer une news en validation</li>
-                <li>Possibilité de valider/publier une news</li>
-                <li>Possibilité de rejet d'une news</li>
-                <li>Possibilité de dépublication d'une news</li>
+                <li>Recherche de tutos (en ligne, en draft, en beta)</li>
+                <li>Recherche de sujets postés sur le forum</li>
+                <li>Choix du clic/hover dans la topbar</li>
+                <li>Choix d'afficher les signatures ou non</li>
+                <li>Choix d'afficher son email publiquement ou non</li>
+                <li>Adresse IP (dernière adresse IP)</li>
             </ul>
         </ul>
         <hr />
         <h4>A venir</h4>
         <ul>
-            <li>Création News</li>
+            <li>Modération d'un membre</li>
             <ul>
-                <li>Sauvegarde des anciennes versions</li>
-            </ul>
-            <li>Lecture des News</li>
-            <ul>
-                <li>Ajouter un bouton d'alerte pour correction</li>
-            </ul>
-            <li>Commentaire de News</li>
-            <ul>
-                <li>Possibilité de signaler un commentaire</li>
-                <li>Possibilité de modérer un commentaire</li>
+                <li>Karma</li>
+                <li>LS</li>
+                <li>Ban du compte</li>
+                <li>Ban IP</li>
             </ul>
     </div>
     <div class="large-4 columns">
         <h3>Forum</h3>
         <h4>Features developpées</h4>
         <ul>
-            <li class="alert">Bouton Forum dans la Topbar</li>
+            <li class="alert">Forum dans la Topbar</li>
             <ul>
                 <li>Affichage des catégories de Forum</li>
-                <li>Suivis suivis visibles</li>
+                <li>Sujets suivis visibles</li>
             </ul>
             <li>Topic</li>
             <ul>
@@ -76,6 +62,8 @@
                 <li>Suivi d'un topic</li>
                 <li>Fermeture d'un topic </li>
                 <li>Pagination sur un topic</li>
+                <li>+1/-1</li>
+                <li>Adresse IP</li>
             </ul>
             <li>Administration des sujets</li>
             <ul>
@@ -90,6 +78,7 @@
         <ul>
             <li>Topic</li>
             <ul>
+                <li>Preconvertir le markdown et afficher le html après</li>
                 <li>Possibilité de plussoiement</li>
                 <li>Affichage du groupe du membre</li>
                 <li>Signaler un message</li>
@@ -97,40 +86,41 @@
             </ul>
     </div>
     <div class="large-4 columns">
-        <h3>Projets</h3>
+        <h3>Tutoriels</h3>
         <h4>Features developpées</h4>
         <ul>
-            <li class="alert">Bouton Forum dans la Topbar</li>
+            <li class="alert">Tutoriels dans la Topbar</li>
             <ul>
-                <li>Liens vers la liste des projets</li>
+                <li>Liens vers la liste des tutoriels</li>
+                <li>Création d'un nouveau tutoriel</li>
+                <li>Import d'un tutoriel au format .tuto</li>
             </ul>
-            <li>Topic</li>
+            <li>Tutoriels</li>
             <ul>
-                <li>Création d'un projet</li>
-                <li>Modification d'un projet</li>
+                <li>Création d'un tuto (big, mini)</li>
+                <li>Création de parties</li>
+                <li>Création de chapitres</li>
+                <li>Création de extrait de chapitre</li>
+                <li>Création de repo git privés et commit à chaque mise à jour/édition du tuto</li>
+                <li>Rédaction à plusieurs</li>
             </ul>
         </ul>
         <hr />
         <h4>A venir</h4>
         <ul>
-            <li>Bouton Projets dans la TopBar</li>
+            <li>Tutoriels</li>
             <ul>
-                <li>Menu déroulant la liste des catégories</li>
+                <li>Gestion des fichiers TOC</li>
+                <li>Ajouter des remarques/commentaires au tutoriel</li>
+                <li>Sommaire d'un tutoriel</li>
+                <li>Passage en Beta, Validation, Publique</li>
+                <li>Affichage du diff entre les versions de tutos</li>
             </ul>
-            <li>Projets</li>
+            <li>Validation</li>
             <ul>
-                <li>Commenter un projet</li>
-                <li>Versionning d'un projet</li>
-                <li>Fonction de recrutement</li>
-                <li>Acceptation à un poste</li>
-                <li>Feature d'évaluation d'un projet</li>
-                <li>Passage en Alpha, Beta, RC, etc.</li>
-            </ul>
-            <li>Administration</li>
-            <ul>
-                <li>Signaler un projet</li>
-                <li>Modération un projet</li>
-                <li>Suppression d'un projet</li>
+                <li>Consultation des projets en attente de validation</li>
+                <li>Consultation du diff entre les différentes version</li>
+                <li>Validation d'un tutoriel</li>
             </ul>
     </div>
 </div>
